--- a/.env
+++ b/.env
@@ -8,4 +8,12 @@ CLERK_SECRET_KEY=sk_test_ncL24uOnn1lifbiuhxubICfrc3OyDIx1IjORmNc5bj
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://<aungmyoaye101>:<F1a7lORXjTaefLuF>@cluster0.tsdj4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="file:./dev.db"
