--- a/.env
+++ b/.env
@@ -17,3 +17,9 @@ CLERK_SECRET_KEY=sk_test_ncL24uOnn1lifbiuhxubICfrc3OyDIx1IjORmNc5bj
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bmV1dHJhbC1hcmFjaG5pZC05Ni5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_ncL24uOnn1lifbiuhxubICfrc3OyDIx1IjORmNc5bj
+
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
