--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
     "@nextui-org/react": "^2.4.6",
+    "@ngrok/ngrok": "^1.4.1",
     "@prisma/client": "^5.18.0",
     "framer-motion": "^11.3.28",
     "mongodb": "^6.8.0",
