--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
 node_modules
-
 dist
-
-dist/** .js
 .env
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
+.env.*local
